# Automatic_Fuel_Management_System

./: Procfile  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
api/: serializers.py  urls.py  views.py
automatic_fuel_management_system/: asgi.py  settings.py  urls.py  wsgi.py
base/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_vechicleusers_active.py  0003_price.py  0004_fueltypes.py
base/templates/base/: Verify.html  fuelStationSignup.html  index.html  signin.html  signup.html
staticfiles/: staticfiles.json
