[tool.poetry]
name = "Automatic_Fuel_Management_System"
version = "0.1.0"
description = ""
authors = ["email"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.8"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"
whitenoise = {extras = ["brotli"], version = "^5.1.0"}
gunicorn = "^20.0.4"
django-mathfilters = "^1.0.0"
twilio = "^7.15.3"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
djangorestframeworksimplejwt = "^5.2.2"